Change in Paragraph

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<p> I am adding something new"
+<p> I am adding something new"</p>
+<p> I love Pakistan </P>
 <!DOCTYPE html>
 <html lang="en">
 <head>
