added new paragraph at start

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <p> I am adding something new"</p>
 <p> I love Pakistan </P>
-<!DOCTYPE html>
+<p> Practice for some clone demand </P>
+<!D OCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
